src/tests/fail-if-else-else-if.err
Fatal error: exception Eqeq.Error("line 13 (char 4): 'else'")
