src/tests/fail-if-else-else-if.eq
SomeContext = {
  a = { 42.333; }

}

SomeContext:find a {
if (3>4){
  print("inside: if!\n");
  }
else{
  print("inside: else!\n");
}
else if (  ) {
  print("inside: else if!\n");
}
